--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "command-line-args": "^5.1.1",
+    "escape-string-regexp": "^4.0.0",
+    "fs-extra": "^9.0.0",
+    "lodash": "^4.17.15",
     "mp3-duration": "^1.1.0"
   }
 }
