--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.0.0",
     "command-line-args": "^5.1.1",
     "escape-string-regexp": "^4.0.0",
     "fs-extra": "^9.0.0",
