--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.0.0",
+    "cli-columns": "^3.1.2",
     "command-line-args": "^5.1.1",
     "escape-string-regexp": "^4.0.0",
     "fs-extra": "^9.0.0",
