--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "escape-string-regexp": "^4.0.0",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
+    "log-update": "^4.0.0",
     "music-metadata": "^6.4.0",
     "node-fetch": "^2.6.0",
     "urlencode": "^1.1.0"
