--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chalk": "^4.0.0",
     "cli-columns": "^3.1.2",
     "command-line-args": "^5.1.1",
+    "encoding": "^0.1.12",
     "escape-string-regexp": "^4.0.0",
     "fs-extra": "^9.0.0",
     "genius-lyrics-api": "^3.0.0",
