--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "cli-columns": "^3.1.2",
+    "clipboardy": "^2.3.0",
     "command-line-args": "^5.1.1",
     "encoding": "^0.1.12",
     "escape-string-regexp": "^4.0.0",
