--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "log-update": "^4.0.0",
     "music-metadata": "^6.4.0",
     "node-fetch": "^2.6.0",
+    "node-mpv": "^2.0.0-beta.1",
     "urlencode": "^1.1.0"
   }
 }
