--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dmp3": "cli.js"
   },
   "dependencies": {
+    "beepbeep": "^1.3.0",
     "chalk": "^4.0.0",
     "cli-columns": "^3.1.2",
     "clipboardy": "^2.3.0",
