--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "beepbeep": "^1.3.0",
+    "better-logging": "^4.4.1",
     "chalk": "^4.0.0",
     "cli-columns": "^3.1.2",
     "clipboardy": "^2.3.0",
