--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "global-install": "npm i -g",
     "dev": "node cli.js"
   },
+  "engines": {
+    "node": ">=23"
+  },
   "bin": {
     "dmp3": "cli.js"
   },
@@ -15,7 +18,7 @@
   "dependencies": {
     "beepbeep": "^1.3.0",
     "better-logging": "^5.0.0",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "cli-columns": "^4.0.0",
     "clipboardy": "^4.0.0",
     "command-line-args": "^6.0.1",
@@ -25,9 +28,9 @@
     "lodash": "^4.17.21",
     "log-update": "^6.1.0",
     "mixpanel": "^0.18.0",
-    "music-metadata": "^10.5.1",
+    "music-metadata": "^10.6.5",
     "node-fetch": "^3.3.2",
-    "node-mpv": "^2.0.0-beta.1",
+    "node-mpv": "git@github.com:dariomac/node-mpv.git",
     "radix-tree": "^0.3.4",
     "random-org": "^2.2.0",
     "urlencode": "^2.0.0"
