--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "show-mem": "ps aux | head -1 && ps aux -h | egrep '[d]mp3|[m]pv'",
     "global-install": "npm i -g",
-    "dev": "node cli.js"
+    "dev": "node cli.js",
+    "build": "cd lib/os-players/avplayer-native && ./build.sh",
+    "postinstall": "npm run build"
   },
   "engines": {
     "node": ">=23"
@@ -30,7 +32,6 @@
     "mixpanel": "^0.18.0",
     "music-metadata": "^10.6.5",
     "node-fetch": "^3.3.2",
-    "node-mpv": "git@github.com:dariomac/node-mpv.git",
     "radix-tree": "^0.3.4",
     "urlencode": "^2.0.0"
   }
